--- a/public/app/sass/_shame.scss
+++ b/public/app/sass/_shame.scss
@@ -102,7 +102,7 @@ input.ng-invalid {
   position: relative;
   text-indent: -9999em;
   border: 1.1em solid rgba(0, 0, 0, 0.2);
-  border-left: 1.1em solid #C72929;
+  border-left: 1.1em solid $brand-primary;
   animation: load8 1.1s infinite linear;
 }
 
@@ -123,7 +123,7 @@ input.ng-invalid {
 
 .planner-time {
   font-size: 1.3em;
-  color: #C72929;
+  color: $brand-primary;
   margin-right: 15px;
   width: 50%;
 }
@@ -155,8 +155,8 @@ input.ng-invalid {
 
 .datepicker {
   .btn-info.active {
-    background-color: #C72929 !important;
-    border-color: #C72929 !important;
+    background-color: $brand-primary !important;
+    border-color: $brand-primary !important;
     span.text-info {
       color: #FFF !important;
     }
