--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -75,6 +75,7 @@
 // Uses Bootstrap classes, markup and variables
 
 @import "bootstrap.dropdowns";
+@import "bootstrap.navbar";
 
 // Components: custom components
 
