--- a/public/app/sass/_bootstrap.navbar.scss
+++ b/public/app/sass/_bootstrap.navbar.scss
@@ -9,3 +9,9 @@
 .navbar-brand {
   padding-left: 5px;
 }
+
+.navbar-name {
+  font-size: 1.2em;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+}
