Move datepicker and logo to own scss file

--- a/public/app/sass/_component.input-groups.scss
+++ b/public/app/sass/_component.input-groups.scss
@@ -1,6 +1,6 @@
-//
-// Input groups
-// --------------------------------------------------
+/**
+ * Oneliner input group
+ */
 
 .input-group-oneliner {
 	position: relative;
