--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -80,6 +80,8 @@
 // Components: custom components
 
 @import "component.input-groups";
+@import "component.logo";
+@import "component.datepicker";
 
 // Utilities:
 
