Remove unused bootstrap stuff

--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -32,15 +32,15 @@
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/input-groups";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/navs";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/navbar";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/pagination";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/pager";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/pagination";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/pager";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/labels";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/badges";
 // @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/jumbotron";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/thumbnails";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/thumbnails";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/alerts";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/progress-bars";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/progress-bars";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/media";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/list-group";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/panels";
@@ -52,7 +52,7 @@
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/modals";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip";
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
-@import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/carousel";
+// @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
 @import "../../components/bootstrap-sass-official/assets/stylesheets/bootstrap/utilities";
