Better placement for reverse trip

--- a/public/app/sass/_component.input-groups.scss
+++ b/public/app/sass/_component.input-groups.scss
@@ -24,3 +24,16 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+.input-group-affix {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		// width: 4em;
+		height: 100%;
+		padding: 10px 16px;
+		font-size: 18px;
+		line-height: 1.33;
+		font-weight: 400;
+}
