Improve layout for mobile

--- a/public/app/sass/_component.input-groups.scss
+++ b/public/app/sass/_component.input-groups.scss
@@ -6,6 +6,8 @@
 	position: relative;
 	> input {
 		padding-left: 3.5em;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 }
 
@@ -25,12 +27,15 @@
   overflow: hidden;
 }
 
+.has-affix > input {
+	padding-right: 2.2em;
+}
+
 .input-group-affix {
 		position: absolute;
 		top: 0;
 		bottom: 0;
 		right: 0;
-		// width: 4em;
 		height: 100%;
 		padding: 10px 16px;
 		font-size: 18px;
