Improve planner results with platforms, see #196

--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -82,6 +82,7 @@
 @import "component.input-groups";
 @import "component.logo";
 @import "component.datepicker";
+@import "component.planner";
 
 // Utilities:
 
