More friendly transfer view

--- a/public/app/sass/_component.planner.scss
+++ b/public/app/sass/_component.planner.scss
@@ -37,3 +37,8 @@
     border: 1px solid $gray-lighter;
     border-width: 1px 0;
   }
+
+  .planner-meta {
+    display: block;
+    margin-top: 5px;
+  }
