added dropdowns under every connection to give feedback. Added styles and AngularJS code for UI manipulation

--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -84,6 +84,7 @@
 @import "component.logo";
 @import "component.datepicker";
 @import "component.planner";
+@import "component.occupancy";
 
 // Utilities:
 
