--- a/public/app/sass/irail/_theme.scss
+++ b/public/app/sass/irail/_theme.scss
@@ -1,48 +1,67 @@
 /* Main SASS CSS file */
+// import PT Sans font family
+//@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 
-.slogan {
-  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+
+h2.apps-header
+{
+  font-family:"PT Sans", sans-serif;
+  font-weight:700;
+  font-size:300%;
 }
 
-.slogan:first-child {
-  margin-top: 20px;
-  margin-bottom: 25px;
+p.apps-text
+{
+  font-family:"PT Sans", sans-serif;
+  font-weight:400;
+  font-size:150%;
+  margin-top:15px !important;
 }
 
-.slogan:last-child {
-  margin-top: 25px;
-  margin-bottom: 20px;
-  font-size: 45px;
-  font-weight: bold;
+a.plan-route-button
+{
+  display:inline-block;
+  width:300px;
+  height:100px;
 }
 
-#gif {
-  width: 20em;
+img.app-image 
+{
+  width:50%;
 }
 
-.railer-parent {
-  text-align: center;
+a.app-link
+{
+  display:inline-block;
+  padding-left:20px;
 }
 
-.railer-block {
-  display: inline-block;
+h3.app-name-ios
+{
+  padding-left:30px !important;
 }
 
-#railer {
-  float: left;
-  width: 18em;
-  padding: 20px 0;
+h3.app-name
+{
+  font-family:'PT Sans', sans-serif;
+  font-size:300%;
+  font-weight:700;
 }
 
-#railer-text {
-  float: left;
-  padding-left: 40px;
-  max-width: 465px;
-  text-align: left;
+h3.app-name small
+{
+  font-weight:400;
+  color:#000000 !important;
+}
+
+div.thank-you-footer
+{
+  background:rgb(191,41,41);
+  color:#FFFFFF;
 }
 
 hr.red {
-  border-top: 1px solid #C72929;
+  border-top: 1px solid rgb(191,41,41);
 }
 
 input.ng-invalid {
