--- a/public/app/sass/_component.appspage.scss
+++ b/public/app/sass/_component.appspage.scss
@@ -34,8 +34,17 @@ p.apps-text > strong {
 a.plan-route-button
 {
   display:inline-block;
-  width:300px;
+  width:350px;
   height:100px;
+  background: rgb(191,41,41) url(../../images/logo.svg) left no-repeat;
+  font-family:"PT Sans";
+  color:#FFFFFF;
+  font-size:300%;
+  text-decoration: none;
+  font-weight:700;
+  background-size: 80px;
+  padding-left:50px;
+  padding-top:16px;
 }
 
 img.app-image 
