--- a/public/app/sass/_bootstrap.dropdowns.scss
+++ b/public/app/sass/_bootstrap.dropdowns.scss
@@ -2,7 +2,7 @@
 // Dropdown menus
 // --------------------------------------------------
 
-.dropdown-menu {
+input + .dropdown-menu {
 	right: 0;
 	margin-top: -1px;
 	border-top-left-radius: 0;
