Link buttons get no left or right padding

--- a/public/app/sass/main.scss
+++ b/public/app/sass/main.scss
@@ -77,6 +77,7 @@
 @import "bootstrap.dropdowns";
 @import "bootstrap.navbar";
 @import "bootstrap.panels";
+@import "bootstrap.buttons";
 
 // Components: custom components
 
