More subtle buttons for occupancy UI

--- a/public/app/sass/_bootstrap.buttons.scss
+++ b/public/app/sass/_bootstrap.buttons.scss
@@ -6,3 +6,19 @@
 	padding-left: 0;
 	padding-right: 0;
 }
+
+.btn-link-subtle {
+  color: $gray-dark;
+
+  &:hover,
+  &:focus {
+    color: $link-hover-color;
+  }
+  &[disabled],
+  fieldset[disabled] & {
+    &:hover,
+    &:focus {
+      color: $btn-link-disabled-color;
+    }
+  }
+}
