use svgs for occupancy icons
fixes #229

also changes the name from crowdness to occupancy (should the pngs there also be removed/renamed? They aren't used anywhere

--- a/public/app/sass/_component.occupancy.scss
+++ b/public/app/sass/_component.occupancy.scss
@@ -10,21 +10,21 @@
 
 .occupancy-high-16
 {
-	background:url(../../images/crowdness-high-16x16.png);
+	background:url(../../images/occupancy-high.svg);
 	height:16px;
 	width:17px;
 }
 
 .occupancy-medium-16
 {
-	background:url(../../images/crowdness-medium-16x16.png);
+	background:url(../../images/occupancy-medium.svg);
 	height:16px;
 	width:17px;
 }
 
 .occupancy-low-16
 {
-	background:url(../../images/crowdness-low-16x16.png);
+	background:url(../../images/occupancy-low.svg);
 	height:16px;
 	width:17px;
 }
