add unknown occupancy
This was there before #237

--- a/public/app/sass/_component.occupancy.scss
+++ b/public/app/sass/_component.occupancy.scss
@@ -29,3 +29,10 @@
 	height:16px;
 	width:17px;
 }
+
+.occupancy-unknown-16
+{
+	background-image:url(../../images/occupancy-unknown.svg);
+	height:16px;
+	width:17px;
+}
